tests/ui/fail/derive_debug/duplicate_derive_debug_2.rs
use modular_bitfield::prelude::*;

#[bitfield]
#[derive(Debug, Debug)]
pub struct SignedInt {
    sign: bool,
    value: B31,
}

fn main() {}
